--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,22 @@
-events {}
-
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
     server {
-        listen       80;
-        server_name  localhost;
+        listen 80;
 
-        # HTTPリクエストをExpress.jsに転送
         location / {
-            proxy_pass http://express:3000; # Express.jsのサービス名
+            proxy_pass http://express:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # WebSocketのエンドポイント用の設定
+        location /ws {
+            proxy_pass http://express:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
