--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
+    "@types/express-session": "^1.17.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -27,7 +28,7 @@
     "@types/passport": "^1.0.15",
     "@types/passport-google-oauth20": "^2.0.14",
     "nodemon": "^3.0.1",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
