--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "@types/express-session": "^1.17.10",
+    "@types/uuid": "^9.0.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
